--- a/src/partials/editor.html
+++ b/src/partials/editor.html
@@ -4,15 +4,47 @@
             <li ng-repeat="scene in scenes">
                 <div class="collapsible-header">{{scene.name}}</div>
                 <div class="collapsible-body">
-                    <div class="col s12">
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <label class="active" for="name">Name</label>
-                                <input class="" name="name" type="text" ng-model="scene.name">
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="row">
+                                <div class="col s1">&nbsp;</div>
+                                <div class="input-field col s10">
+                                    <label class="active" for="name">Name</label>
+                                    <input name="name" type="text" ng-model="scene.name">
+                                </div>
                             </div>
                         </div>
-                        <div class="row right-align">
-                            <a class="btn grey darken-4 waves-effect waves-light" ng-click="addExit(scene)">Add Exit</a>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="row">
+                                <div class="col s1">&nbsp;</div>
+                                <div class="input-field col s10">
+                                    <label class="" for="text">Text</label>
+                                    <textarea class="materialize-textarea" name="text" length="120" ng-model="scene.text"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="row">
+                                <div class="col s1">&nbsp;</div>
+                                <div class="input-field col s5" ng-repeat="($index, exit) in scene.exits">
+                                    <label class="" for="exit{{$index + 1}}">Exit {{$index + 1}}</label>
+                                    <input name="exit{{$index + 1}}" type="text" ng-model="exit.label">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <div class="row">
+                                <div class="col s1">&nbsp;</div>
+                                <div class="input-field col s10">
+                                    <a class="btn grey darken-4 waves-effect waves-light" ng-click="addExit(scene)" ng-class="{disabled: !canAddExit(scene)}">Add Exit</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -22,6 +54,7 @@
     <div class="row">
         <div class="col s12">
             <div class="row right-align">
+                <a class="btn" ng-click="compile()">Compile Story</a>
                 <a class="btn" ng-click="addScene()">Add Scene</a>
             </div>
         </div>
