Simplify creation process

--- a/src/partials/editor.html
+++ b/src/partials/editor.html
@@ -32,7 +32,7 @@
                                 <div class="col s1">&nbsp;</div>
                                 <div class="input-field col s5" ng-repeat="($index, exit) in scene.exits">
                                     <label class="" for="exit{{$index + 1}}">Exit {{$index + 1}}</label>
-                                    <input name="exit{{$index + 1}}" type="text" ng-model="exit.label">
+                                    <input name="exit{{$index + 1}}" type="text" ng-model="exit.name">
                                 </div>
                             </div>
                         </div>
