--- a/src/partials/editor.html
+++ b/src/partials/editor.html
@@ -11,7 +11,7 @@
                                 <div class="input-field col s10">
                                     <label class="active" for="name">Name</label>
                                     <input name="name" type="text" ng-model="scene.label">
-                                    <span class="character-counter" style="float: right; font-size: 12px; height: 1px;" ng-hide="scene.isRoot">{{140 - countCharacters(scene)}}</span>
+                                    <span class="character-counter" ng-hide="scene.isRoot">{{140 - countCharacters(scene)}}</span>
                                 </div>
                             </div>
                         </div>
@@ -23,7 +23,7 @@
                                 <div class="input-field col s10">
                                     <label for="text">Text</label>
                                     <textarea class="materialize-textarea" name="text" ng-model="scene.text"></textarea>
-                                    <span class="character-counter" style="float: right; font-size: 12px; height: 1px;">{{140 - countCharacters(scene)}}</span>
+                                    <span class="character-counter">{{140 - countCharacters(scene)}}</span>
                                 </div>
                             </div>
                         </div>
@@ -35,7 +35,7 @@
                                 <div class="input-field col s5" ng-repeat="($index, exit) in scene.exits">
                                     <label class="active" for="exit{{$index + 1}}">Exit {{$index + 1}}</label>
                                     <input name="exit{{$index + 1}}" type="text" ng-model="exit.label">
-                                    <span class="character-counter" style="float: right; font-size: 12px; height: 1px;">{{140 - countCharacters(scene)}}</span>
+                                    <span class="character-counter">{{140 - countCharacters(scene)}}</span>
                                 </div>
                             </div>
                         </div>
