Text isn't long enough for textarea

--- a/src/partials/editor.html
+++ b/src/partials/editor.html
@@ -22,7 +22,7 @@
                                 <div class="col s1">&nbsp;</div>
                                 <div class="input-field col s10">
                                     <label for="text">Text</label>
-                                    <textarea class="materialize-textarea" name="text" ng-model="scene.text"></textarea>
+                                    <input name="text" type="text" ng-model="scene.text">
                                     <span class="character-counter">{{140 - countCharacters(scene)}}</span>
                                 </div>
                             </div>
