--- a/src/partials/editor.html
+++ b/src/partials/editor.html
@@ -2,11 +2,15 @@
     <div class="row">
         <ul class="collapsible" data-collapsible="accordion">
             <li ng-repeat="scene in scenes">
-                <div class="collapsible-header">{{scene.label}}</div>
+                <div class="collapsible-header">
+                    <span>({{countChildren(scene)}})&nbsp;</span>
+                    <span>{{scene.label}}</span>
+                </div>
                 <div class="collapsible-body">
                     <div class="row">
                         <div class="col s12">
                             <div class="row">
+                                <br>
                                 <div class="col s1">&nbsp;</div>
                                 <div class="input-field col s10">
                                     <label class="active" for="name">Name</label>
@@ -57,8 +61,18 @@
     <div class="row">
         <div class="col s12">
             <div class="row right-align">
-                <a class="btn" ng-click="compile()">Compile Story</a>
+                <a class="btn grey darken-4 waves-effect waves-light" ng-click="compile()">Compile Story</a>
             </div>
         </div>
+    </div>
+</div>
+<div class="modal modal-fixed-footer" id="story">
+    <div class="modal-content">
+        <h4>{{scenes[0].label}}.json</h4>
+        <pre>{{story}}</pre>
+    </div>
+    <div class="modal-footer">
+        <a class="btn-flat modal-action modal-close">Close</a>
+        <a class="btn-flat" ng-click="copy()">Copy</a>
     </div>
 </div>
